qt/gen_qwidget.nim

proc fcQWidget_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_dragLeaveEvent".}
proc fQWidget_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_dropEvent".}
proc fcQWidget_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_dropEvent".}
proc fQWidget_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_showEvent".}
proc fcQWidget_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_showEvent".}
proc fQWidget_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_hideEvent".}
proc fcQWidget_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_hideEvent".}
proc fQWidget_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QWidget_virtualbase_nativeEvent".}
proc fcQWidget_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_nativeEvent".}
proc fQWidget_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QWidget_virtualbase_changeEvent".}
proc fcQWidget_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_changeEvent".}
proc fQWidget_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QWidget_virtualbase_metric".}
proc fcQWidget_override_virtual_metric(self: pointer, slot: int) {.importc: "QWidget_override_virtual_metric".}
proc fQWidget_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QWidget_virtualbase_initPainter".}
proc fcQWidget_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QWidget_override_virtual_initPainter".}
proc fQWidget_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QWidget_virtualbase_redirected".}
proc fcQWidget_override_virtual_redirected(self: pointer, slot: int) {.importc: "QWidget_override_virtual_redirected".}
proc fQWidget_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QWidget_virtualbase_sharedPainter".}
proc fcQWidget_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QWidget_override_virtual_sharedPainter".}
proc fQWidget_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QWidget_virtualbase_inputMethodEvent".}
proc fcQWidget_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_inputMethodEvent".}
proc fQWidget_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QWidget_virtualbase_inputMethodQuery".}
proc fcQWidget_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QWidget_override_virtual_inputMethodQuery".}
proc fQWidget_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QWidget_virtualbase_focusNextPrevChild".}
proc fcQWidget_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QWidget_override_virtual_focusNextPrevChild".}
proc fQWidget_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QWidget_virtualbase_eventFilter".}
proc fcQWidget_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QWidget_override_virtual_eventFilter".}
proc fQWidget_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_timerEvent".}
proc fcQWidget_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_timerEvent".}
proc fQWidget_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_childEvent".}
proc fcQWidget_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_childEvent".}
proc fQWidget_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_customEvent".}
proc fcQWidget_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_customEvent".}
proc fQWidget_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QWidget_virtualbase_connectNotify".}
proc fcQWidget_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QWidget_override_virtual_connectNotify".}
proc fQWidget_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QWidget_virtualbase_disconnectNotify".}
proc fcQWidget_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QWidget_override_virtual_disconnectNotify".}
proc fcQWidget_staticMetaObject(): pointer {.importc: "QWidget_staticMetaObject".}
proc fcQWidget_delete(self: pointer) {.importc: "QWidget_delete".}


func init*(T: type QWidgetData, h: ptr cQWidgetData): QWidgetData =
  T(h: h)
proc create*(T: type QWidgetData, param1: QWidgetData): QWidgetData =

  QWidgetData.init(fcQWidgetData_new(param1.h))
proc operatorAssign*(self: QWidgetData, param1: QWidgetData): void =

  fcQWidgetData_operatorAssign(self.h, param1.h)

proc delete*(self: QWidgetData) =
  fcQWidgetData_delete(self.h)

func init*(T: type QWidget, h: ptr cQWidget): QWidget =
  T(h: h)
proc create*(T: type QWidget, parent: QWidget): QWidget =

  QWidget.init(fcQWidget_new(parent.h))
proc create*(T: type QWidget, ): QWidget =

  QWidget.init(fcQWidget_new2())
proc create*(T: type QWidget, parent: QWidget, f: gen_qnamespace.WindowType): QWidget =

  QWidget.init(fcQWidget_new3(parent.h, cint(f)))
proc metaObject*(self: QWidget, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQWidget_metaObject(self.h))

proc metacast*(self: QWidget, param1: cstring): pointer =

  fcQWidget_metacast(self.h, param1)

proc metacall*(self: QWidget, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQWidget_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QWidget, s: cstring): string =

  let v_ms = fcQWidget_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QWidget, s: cstring): string =

  let v_ms = fcQWidget_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc devType*(self: QWidget, ): cint =

  fcQWidget_devType(self.h)

proc winId*(self: QWidget, ): uint =

  fcQWidget_winId(self.h)

proc createWinId*(self: QWidget, ): void =

  fcQWidget_createWinId(self.h)

proc internalWinId*(self: QWidget, ): uint =

  fcQWidget_internalWinId(self.h)

proc effectiveWinId*(self: QWidget, ): uint =

  fcQWidget_effectiveWinId(self.h)

proc style*(self: QWidget, ): gen_qstyle.QStyle =

  gen_qstyle.QStyle(h: fcQWidget_style(self.h))

proc setStyle*(self: QWidget, style: gen_qstyle.QStyle): void =

  fcQWidget_setStyle(self.h, style.h)

proc isTopLevel*(self: QWidget, ): bool =

  fcQWidget_isTopLevel(self.h)

proc isWindow*(self: QWidget, ): bool =

  fcQWidget_isWindow(self.h)

proc isModal*(self: QWidget, ): bool =

  fcQWidget_isModal(self.h)

proc windowModality*(self: QWidget, ): gen_qnamespace.WindowModality =

  gen_qnamespace.WindowModality(fcQWidget_windowModality(self.h))

proc setWindowModality*(self: QWidget, windowModality: gen_qnamespace.WindowModality): void =

  fcQWidget_setWindowModality(self.h, cint(windowModality))

proc isEnabled*(self: QWidget, ): bool =

  fcQWidget_isEnabled(self.h)

proc isEnabledTo*(self: QWidget, param1: QWidget): bool =

  fcQWidget_isEnabledTo(self.h, param1.h)

proc isEnabledToTLW*(self: QWidget, ): bool =

  fcQWidget_isEnabledToTLW(self.h)

proc setEnabled*(self: QWidget, enabled: bool): void =

  fcQWidget_setEnabled(self.h, enabled)

proc setDisabled*(self: QWidget, disabled: bool): void =

  fcQWidget_setDisabled(self.h, disabled)

proc setWindowModified*(self: QWidget, windowModified: bool): void =

  fcQWidget_setWindowModified(self.h, windowModified)

proc frameGeometry*(self: QWidget, ): gen_qrect.QRect =

  gen_qrect.QRect(h: fcQWidget_frameGeometry(self.h))

proc geometry*(self: QWidget, ): gen_qrect.QRect =

  gen_qrect.QRect(h: fcQWidget_geometry(self.h))

proc normalGeometry*(self: QWidget, ): gen_qrect.QRect =

  gen_qrect.QRect(h: fcQWidget_normalGeometry(self.h))

proc x*(self: QWidget, ): cint =

  fcQWidget_x(self.h)

proc y*(self: QWidget, ): cint =

  fcQWidget_y(self.h)

proc pos*(self: QWidget, ): gen_qpoint.QPoint =

  gen_qpoint.QPoint(h: fcQWidget_pos(self.h))

proc frameSize*(self: QWidget, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQWidget_frameSize(self.h))

proc size*(self: QWidget, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQWidget_size(self.h))

proc width*(self: QWidget, ): cint =

  fcQWidget_width(self.h)

proc height*(self: QWidget, ): cint =

  fcQWidget_height(self.h)

proc rect*(self: QWidget, ): gen_qrect.QRect =

  gen_qrect.QRect(h: fcQWidget_rect(self.h))

proc childrenRect*(self: QWidget, ): gen_qrect.QRect =

  gen_qrect.QRect(h: fcQWidget_childrenRect(self.h))

proc childrenRegion*(self: QWidget, ): gen_qregion.QRegion =

  gen_qregion.QRegion(h: fcQWidget_childrenRegion(self.h))

proc minimumSize*(self: QWidget, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQWidget_minimumSize(self.h))

proc maximumSize*(self: QWidget, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQWidget_maximumSize(self.h))

proc minimumWidth*(self: QWidget, ): cint =

  fcQWidget_minimumWidth(self.h)

proc minimumHeight*(self: QWidget, ): cint =

  fcQWidget_minimumHeight(self.h)

proc maximumWidth*(self: QWidget, ): cint =

  fcQWidget_maximumWidth(self.h)

proc maximumHeight*(self: QWidget, ): cint =

  fcQWidget_maximumHeight(self.h)

proc setMinimumSize*(self: QWidget, minimumSize: gen_qsize.QSize): void =

  fcQWidget_setMinimumSize(self.h, minimumSize.h)

proc setMinimumSize2*(self: QWidget, minw: cint, minh: cint): void =

  fcQWidget_setMinimumSize2(self.h, minw, minh)

proc setMaximumSize*(self: QWidget, maximumSize: gen_qsize.QSize): void =

  fcQWidget_setMaximumSize(self.h, maximumSize.h)

proc setMaximumSize2*(self: QWidget, maxw: cint, maxh: cint): void =

  fcQWidget_setMaximumSize2(self.h, maxw, maxh)

proc setMinimumWidth*(self: QWidget, minw: cint): void =

  fcQWidget_setMinimumWidth(self.h, minw)

proc setMinimumHeight*(self: QWidget, minh: cint): void =

  fcQWidget_setMinimumHeight(self.h, minh)

proc setMaximumWidth*(self: QWidget, maxw: cint): void =

  fcQWidget_setMaximumWidth(self.h, maxw)

proc setMaximumHeight*(self: QWidget, maxh: cint): void =

  fcQWidget_setMaximumHeight(self.h, maxh)

proc sizeIncrement*(self: QWidget, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQWidget_sizeIncrement(self.h))

proc setSizeIncrement*(self: QWidget, sizeIncrement: gen_qsize.QSize): void =

  fcQWidget_setSizeIncrement(self.h, sizeIncrement.h)

proc setSizeIncrement2*(self: QWidget, w: cint, h: cint): void =

  fcQWidget_setSizeIncrement2(self.h, w, h)

proc baseSize*(self: QWidget, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQWidget_baseSize(self.h))

proc setBaseSize*(self: QWidget, baseSize: gen_qsize.QSize): void =

  fcQWidget_setBaseSize(self.h, baseSize.h)

proc setBaseSize2*(self: QWidget, basew: cint, baseh: cint): void =

  fcQWidget_setBaseSize2(self.h, basew, baseh)

proc setFixedSize*(self: QWidget, fixedSize: gen_qsize.QSize): void =

  fcQWidget_setFixedSize(self.h, fixedSize.h)

proc setFixedSize2*(self: QWidget, w: cint, h: cint): void =

  fcQWidget_setFixedSize2(self.h, w, h)

proc setFixedWidth*(self: QWidget, w: cint): void =

  fcQWidget_setFixedWidth(self.h, w)

proc setFixedHeight*(self: QWidget, h: cint): void =

  fcQWidget_setFixedHeight(self.h, h)

proc mapToGlobal*(self: QWidget, param1: gen_qpoint.QPoint): gen_qpoint.QPoint =

  gen_qpoint.QPoint(h: fcQWidget_mapToGlobal(self.h, param1.h))

proc mapFromGlobal*(self: QWidget, param1: gen_qpoint.QPoint): gen_qpoint.QPoint =
